--- a/pages/composite/hotelmanage/HotelAdd.html
+++ b/pages/composite/hotelmanage/HotelAdd.html
@@ -11,8 +11,6 @@
     <link rel="stylesheet" href="../../../static/css/font.css">
     <link rel="stylesheet" href="../../../static/css/weadmin.css">
     <script src="../../../lib/layui/layui.js" charset="utf-8"></script>
-    <script src="../../../static/js/extends/data.js" type="text/javascript" charset="utf-8"></script>
-    <script src="../../../static/js/extends/province.js" type="text/javascript" charset="utf-8"></script>
     <script src="HotelAdd.js" type="text/javascript" charset="utf-8"></script>
 
 
@@ -64,6 +62,14 @@
             </div>
         </div>
         <div class="layui-form-item">
+            <label class="layui-form-label"><span class="we-red">*</span>街道地址</label>
+            <div class="layui-input-inline">
+                <input id="street" lay-verType="tips" type="text" name="street" lay-verify="required"
+                       jq-error="街道地址" placeholder="请输入酒店街道地址" autocomplete="off"
+                       class="layui-input ">
+            </div>
+        </div>
+        <div class="layui-form-item">
             <label class="layui-form-label"><span class="we-red">*</span>酒店地址</label>
             <div class="layui-input-block">
                 <input id="address" lay-verType="tips" type="text" name="address" lay-verify="required"
@@ -76,18 +82,12 @@
                 <button class="layui-btn" lay-submit="" lay-filter="address">查询经纬度</button>
             </div>
         </div>
-        <div class="layui-form-item layui-form-text">
-            <label class="layui-form-label">酒店简介</label>
-            <div class="layui-input-block">
-                <textarea name="hotel_profile" id="hotel_profile" placeholder="酒店简介" class="layui-textarea"></textarea>
-            </div>
-        </div>
         <div class="layui-form-item layui-hide">
 
             <div class="layui-inline">
                 <label class="layui-form-label">经度</label>
                 <div class="layui-input-inline" style="width: 100px;">
-                    <input type="text" name="longitude" autocomplete="off" class="layui-input">
+                    <input type="text" name="longitude" autocomplete="off" id="longitude" class="layui-input">
                 </div>
 
             </div>
@@ -95,11 +95,26 @@
             <div class="layui-inline">
                 <label class="layui-form-label">纬度</label>
                 <div class="layui-input-inline" style="width: 100px;">
-                    <input type="text" name="latitude" autocomplete="off" class="layui-input">
+                    <input type="text" name="latitude"  id="latitude" autocomplete="off" class="layui-input">
                 </div>
             </div>
 
         </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label"><span class="we-red">*</span>联系电话</label>
+            <div class="layui-input-inline">
+                <input id="tel" lay-verType="tips" type="tel" name="tel" lay-verify="required"
+                       jq-error="请输入酒店联系电话" placeholder="请输入酒店联系电话" autocomplete="off"
+                       class="layui-input ">
+            </div>
+        </div>
+        <div class="layui-form-item layui-form-text">
+            <label class="layui-form-label">酒店简介</label>
+            <div class="layui-input-block">
+                <textarea name="hotel_profile" id="hotel_profile" placeholder="酒店简介" class="layui-textarea"></textarea>
+            </div>
+        </div>
+
         <div class="layui-form-item">
             <div class="layui-input-block layui-upload">
                 <button type="button" class="layui-btn" id="test2">选择酒店图片</button>
@@ -118,11 +133,12 @@
         </div>
         <div class="layui-form-item">
             <div class="layui-input-block">
-                <button class="layui-btn" lay-submit="" lay-filter="add">立即提交</button>
+                <button class="layui-btn" lay-submit="" lay-filter="add" id="add">立即提交</button>
                 <button id="reset" type="reset" class="layui-btn layui-btn-primary">重置</button>
             </div>
         </div>
         <input type="hidden" name="hotelnum" value="0"/>
+        <input type="hidden" id="cover_images" value=""/>
     </form>
 </div>
 
