--- a/pages/composite/rooms/room_manage.html
+++ b/pages/composite/rooms/room_manage.html
@@ -54,7 +54,7 @@
 <!--<script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>-->
 <script src="../../../lib/layui/layui.js" charset="utf-8"></script>
 <!--<script src="../../../static/js/eleDel.js" type="text/javascript" charset="utf-8"></script>-->
-<script src="room_style_manage.js" type="text/javascript" charset="utf-8"></script>
+<script src="room_manage.js" type="text/javascript" charset="utf-8"></script>
 <script src="../../../static/js/showPOP.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/html" id="barDemo">
     <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看</a>
