--- a/pages/composite/rooms/room_styleAdd.html
+++ b/pages/composite/rooms/room_styleAdd.html
@@ -6,7 +6,8 @@
     <title>创建房间类型</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link rel="stylesheet" href="../../../static/css/font.css">
     <link rel="stylesheet" href="../../../static/css/weadmin.css">
     <script src="../../../lib/layui/layui.js" charset="utf-8"></script>
@@ -17,6 +18,7 @@
     <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
     <script src="https://cdn.staticfile.org/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+
 </head>
 
 <body>
@@ -28,43 +30,56 @@
         <div class="layui-form-item">
             <label class="layui-form-label"><span class="we-red">*</span>酒店名称</label>
             <div class="layui-input-block">
-                <select  name="hotel" id="hotel-select" lay-verify="required" lay-filter="pid-select">
+                <select name="hotel" id="hotel-select" lay-verify="required" lay-filter="pid-select">
                 </select>
             </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label"><span class="we-red">*</span>类型名称</label>
             <div class="layui-input-block">
-                <input  id="style_name" lay-verType="tips" type="text" name="style_name" lay-verify="required"  placeholder="请输入房间类型名称，如‘豪华双人套房’" autocomplete="off" class="layui-input ">
+                <input id="style_name" lay-verType="tips" type="text" name="style_name" lay-verify="required"
+                       placeholder="请输入房间类型名称，如‘豪华双人套房’" autocomplete="off" class="layui-input ">
             </div>
         </div>
 
         <div class="layui-form-item layui-form-text">
             <label class="layui-form-label">类型简介</label>
             <div class="layui-input-block">
-                <textarea  id="hotel_profile" name="hotel_profile" placeholder="房间类型简介" class="layui-textarea"></textarea>
+                <textarea id="hotel_profile" name="hotel_profile" placeholder="房间类型简介"
+                          class="layui-textarea"></textarea>
             </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">价格</label>
             <div class="layui-input-inline">
-                <input  id="price" lay-verType="tips" type="number" name="price" lay-verify="required"  placeholder="价格" autocomplete="off" class="layui-input ">
+                <input id="price" lay-verType="tips" type="number" name="price" lay-verify="required" placeholder="价格"
+                       value="0" autocomplete="off" class="layui-input ">
             </div>
         </div>
         <div class="layui-form-item">
             <div class="layui-input-block layui-upload">
-                <button type="button" class="layui-btn" id="test2">选择图片</button>
-                <blockquote class="layui-elem-quote layui-quote-nm" style="margin-top: 10px;">
-                    预览：
-                    <div class="layui-upload-list" id="demo2"></div>
-                </blockquote>
+                <button type="button" class="layui-btn" id="test1">选择封面图片</button>
+                <div class="layui-upload-list">
+                    <img style="width: 300px;height: 300px" class="layui-upload-img" id="demo1">
+                    <p id="demoText"></p>
+                </div>
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <div class=" layui-input-block layui-upload">
+                <button type="button" class="layui-btn " id="testList">选择详情图片</button>
+                <div class="layui-upload-list" >
+
+                        <div id="demoList"></div>
+                </div>
+                <button type="button" class="layui-btn" id="testListAction">开始上传</button>
             </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">状态</label>
             <div class="layui-input-inline">
-                <input id="radio1" type="radio" name="is_active" title="启用" value="1" checked />
-                <input  id="radio2"type="radio" name="is_active" title="禁用" value="0" />
+                <input id="radio1" type="radio" name="is_active" title="启用" value="1" checked/>
+                <input id="radio2" type="radio" name="is_active" title="禁用" value="0"/>
             </div>
         </div>
         <div class="layui-form-item">
@@ -73,7 +88,8 @@
                 <button id="reset" type="reset" class="layui-btn layui-btn-primary">重置</button>
             </div>
         </div>
-        <input type="hidden" name="hotelnum" value="0" />
+        <input type="hidden" name="cover_images"/>
+        <input type="hidden" name="hotelnum" value="0"/>
     </form>
 </div>
 
