--- a/pages/assistant/StaffAdd.html
+++ b/pages/assistant/StaffAdd.html
@@ -8,10 +8,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <link rel="stylesheet" href="../../../static/css/font.css">
-    <link rel="stylesheet" href="../../../static/css/weadmin.css">
-    <script src="../../../lib/layui/layui.js" charset="utf-8"></script>
-    <script src="room_styleAdd.js" type="text/javascript" charset="utf-8"></script>
+    <link rel="stylesheet" href="../../static/css/font.css">
+    <link rel="stylesheet" href="../../static/css/weadmin.css">
+    <script src="../../lib/layui/layui.js" charset="utf-8"></script>
+    <script src="StaffAdd.js" type="text/javascript" charset="utf-8"></script>
 
     <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
     <!--[if lt IE 9]>
@@ -23,37 +23,33 @@
 
 <body>
 <div class="weadmin-body">
-
     <form id="form1" class="layui-form">
-
-
         <div class="layui-form-item">
             <label class="layui-form-label"><span class="we-red">*</span>酒店名称</label>
-            <div class="layui-input-block">
-                <select name="hotel" id="hotel-select" lay-verify="required" lay-filter="pid-select">
+            <div class="layui-input-inline">
+                <select id="belong_hotel" name="hotel"  lay-verify="required" lay-filter="pid-select">
                 </select>
             </div>
         </div>
-
-
         <div class="layui-form-item " >
             <label class="layui-form-label"><span class="we-red">*</span>登录账号</label>
             <div class="layui-input-inline">
-                <input id="username" lay-verType="tips" type="text" name="username"  placeholder="请输入登录的账号名"
+                <input id="user" lay-verType="tips" type="text" name="user"  placeholder="请输入登录的账号名"
                        autocomplete="off" class="layui-input ">
             </div>
         </div>
-        <div class="layui-form-item">
+        <div class="layui-form-item layui-hide hide" >
             <label class="layui-form-label"><span class="we-red">*</span>登录密码</label>
             <div class="layui-input-inline">
-                <input id="password" lay-verType="tips" type="text" name="password" lay-verify="required"
+                <input id="password" lay-verType="tips" type="password" name="password"
                        placeholder="请输入登录密码" autocomplete="off" class="layui-input ">
             </div>
+
         </div>
-        <div class="layui-form-item">
+        <div class="layui-form-item layui-hide hide">
             <label class="layui-form-label"><span class="we-red">*</span>确认密码</label>
             <div class="layui-input-inline">
-                <input id="repassword" lay-verType="tips" type="text" name="repassword" lay-verify="required"
+                <input id="repassword" lay-verType="tips" type="password" name="repassword"
                        placeholder="请输入登录密码" autocomplete="off" class="layui-input ">
             </div>
         </div>
@@ -67,7 +63,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">性别</label>
             <div class="layui-input-inline">
-                <input id="radio1" type="radio" name="sex" title="男" value="1" checked/>
+                <input id="radio1" type="radio" name="sex" title="男" value="1" />
                 <input id="radio2" type="radio" name="sex" title="女" value="0"/>
             </div>
         </div>
