--- a/pages/composite/rooms/room_styleAdd.html
+++ b/pages/composite/rooms/room_styleAdd.html
@@ -71,6 +71,12 @@
             </div>
         </div>
         <div class="layui-form-item">
+            <label class="layui-form-label">标签</label>
+            <div class="layui-input-block" id="tag_div">
+
+            </div>
+        </div>
+        <div class="layui-form-item">
             <div class="layui-input-block layui-upload">
                 <button type="button" class="layui-btn" id="test1">选择封面图片</button>
                 <div class="layui-upload-list">
