--- a/pages/goods/GoodsAdd.html
+++ b/pages/goods/GoodsAdd.html
@@ -24,48 +24,45 @@
 <div class="weadmin-body">
 
     <form id="form1" class="layui-form">
+
         <div class="layui-form-item">
+            <div class="layui-inline">
             <label class="layui-form-label"><span class="we-red">*</span>商品类型</label>
             <div class="layui-input-inline">
                 <select name="category" id="category" lay-verify="required" lay-filter="pid-select">
                 </select>
             </div>
-        </div>
-
-        <div class="layui-form-item">
-            <label class="layui-form-label">商品名称</label>
-            <div class="layui-input-inline">
-                <input id="goods_name" lay-verType="tips" type="text" name="goods_name" lay-verify="required"
-                       placeholder="商品名称，如‘薯片’" autocomplete="off" class="layui-input ">
+                <div class="layui-inline">
+                    <label class="layui-form-label">商品名称</label>
+                    <div class="layui-input-inline">
+                        <input id="goods_name" lay-verType="tips" type="text" name="goods_name" lay-verify="required"
+                               placeholder="商品名称，如‘薯片’" autocomplete="off" class="layui-input ">
+                    </div>
+                </div>
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">商品价格</label>
-            <div class="layui-input-inline">
-                <input id="goods_price" lay-verType="tips" type="number" name="goods_price" lay-verify="required"
-                       placeholder="商品价格" autocomplete="off" class="layui-input ">
-            </div>
-        </div>
-        <div class="layui-form-item">
+            <div class="layui-inline">
             <label class="layui-form-label">积分换取</label>
             <div class="layui-input-inline">
                 <input id="radio3" type="radio" lay-filter="is_integral" name="is_integral" title="是" value="1"
-                       />
+                />
                 <input id="radio4" type="radio" lay-filter="is_integral" name="is_integral" title="否" value="0" checked/>
             </div>
-        </div>
-        <div class="layui-form-item layui-hide" id="need_div">
-            <label class="layui-form-label">消费积分</label>
-            <div class="layui-input-inline">
-                <input id="need_integral" lay-verType="tips" type="number" name="need_integral"
-                       placeholder="当前商品需要的积分数" autocomplete="off" class="layui-input " value="0">
             </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">是否促销</label>
-            <div class="layui-input-inline">
-                <input  type="radio" name="is_promotion" title="是" value="1" />
-                <input  type="radio" name="is_promotion" title="否" value="0" checked/>
+            <div class="layui-inline" id="price_div">
+                <label class="layui-form-label">商品价格</label>
+                <div class="layui-input-inline">
+                    <input id="goods_price" lay-verType="tips" type="number" name="goods_price" lay-verify="required"
+                           placeholder="商品价格" autocomplete="off" class="layui-input ">
+                </div>
+            </div>
+            <div class="layui-inline layui-hide" id="need_div">
+                <label class="layui-form-label">所需积分</label>
+                <div class="layui-input-inline">
+                    <input id="need_integral" lay-verType="tips" type="number" name="need_integral"
+                           placeholder="当前商品需要的积分数" autocomplete="off" class="layui-input " value="0">
+                </div>
             </div>
         </div>
         <div class="layui-form-item">
@@ -74,12 +71,20 @@
                 <input  type="radio" name="is_special" lay-filter="is_special" title="是" value="1" />
                 <input  type="radio" name="is_special" lay-filter="is_special" title="否" value="0" checked />
             </div>
+
         </div>
-        <div class="layui-form-item layui-hide" id="special_div">
+        <div class="layui-form-item layui-hide"  id="special_div">
             <label class="layui-form-label">会员选择</label>
             <div class="layui-input-inline">
                 <select name="vip_info" id="vip_info" lay-verify="required" lay-filter="pid-select">
                 </select>
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">是否促销</label>
+            <div class="layui-input-inline">
+                <input  type="radio" name="is_promotion" title="是" value="1" />
+                <input  type="radio" name="is_promotion" title="否" value="0" checked/>
             </div>
         </div>
         <div class="layui-form-item">
@@ -119,7 +124,6 @@
         <input type="hidden" name="cover_image" id="cover_image" value=""/>
     </form>
 </div>
-
 
 </body>
 
