--- a/pages/order/marketOrderList.html
+++ b/pages/order/marketOrderList.html
@@ -42,7 +42,7 @@
 
                 <select name="order_status" id="order_status"  lay-filter="search">
                     <option value=""></option>
-                    <option value="10">待支付</option>
+                    <option value="10">未支付</option>
                     <option value="20">待发货</option>
                     <option value="30">待收货</option>
                     <option value="40">已完成</option>
